Ensure My Jetpack notice aligns with design specs, plus minor cleanup

--- a/projects/packages/my-jetpack/_inc/style.module.scss
+++ b/projects/packages/my-jetpack/_inc/style.module.scss
@@ -8,6 +8,18 @@
 		.jp-dashboard-footer__jetpack-symbol {
 			height: 16px;
 		}
+
+		&:has(.my-jetpack-deprecate-notice-title) {
+			& .jetpack-deprecation-notice-link {
+				color: inherit;
+				font-weight: 600;
+				padding-right: 5px;
+			}
+		}
+	
+		.my-jetpack-deprecate-notice-title {
+			font-weight: 600;
+		}
 	}
 
 	#wpbody-content {
